--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-remark-images": "^5.8.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-transformer-remark": "^4.8.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
