--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-reveal": "^1.2.2",
+    "react-spring": "^9.2.4"
   },
   "devDependencies": {
     "prettier": "2.3.2"
