--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fast-marquee": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-spring": "^9.2.4"
